Add comments making recommendations for improving the code logic, comments, type safety, etc.

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
             <version>2.6</version>
         </dependency>
 
+<!--        TODO ctrom recommendation: You seem to have a couple libraries here for CSV manipulation, but I don't see them being used in the code. Unused dependencies can be a vector for attack. -->
         <!-- https://mvnrepository.com/artifact/net.sf.supercsv/super-csv -->
         <dependency>
             <groupId>net.sf.supercsv</groupId>
